--- a/package.json
+++ b/package.json
@@ -1,40 +1,48 @@
 {
-  "name": "is-hyper",
-  "version": "1.0.0",
-  "description": "Check if you're running in Hyper",
-  "license": "MIT",
-  "repository": "sindresorhus/is-hyper",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=4"
-  },
-  "scripts": {
-    "test": "xo && ava"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "hyper",
-    "app",
-    "terminal",
-    "term",
-    "console",
-    "semver",
-    "version",
-    "check",
-    "detect",
-    "hyperterm"
-  ],
-  "dependencies": {
-    "semver": "^5.3.0"
-  },
-  "devDependencies": {
-    "ava": "*",
-    "xo": "*"
-  }
+	"name": "is-hyper",
+	"version": "1.0.0",
+	"description": "Check if you're running in Hyper",
+	"license": "MIT",
+	"repository": "sindresorhus/is-hyper",
+	"funding": "https://github.com/sponsors/sindresorhus",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "https://sindresorhus.com"
+	},
+	"type": "module",
+	"exports": {
+		"types": "./index.d.ts",
+		"default": "./index.js"
+	},
+	"sideEffects": false,
+	"engines": {
+		"node": ">=18"
+	},
+	"scripts": {
+		"test": "xo && ava"
+	},
+	"files": [
+		"index.js",
+		"index.d.ts"
+	],
+	"keywords": [
+		"hyper",
+		"app",
+		"terminal",
+		"term",
+		"console",
+		"semver",
+		"version",
+		"check",
+		"detect",
+		"hyperterm"
+	],
+	"dependencies": {
+		"semver": "^7.6.0"
+	},
+	"devDependencies": {
+		"ava": "^6.1.2",
+		"xo": "^0.58.0"
+	}
 }
